--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cyn-assets",
-  "version": "0.1.0",
+  "name": "dingai-assets",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -8,12 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.4.11",
     "file-saver": "^2.0.0",
     "u-reset.css": "^1.0.5",
     "v-charts": "^1.19.0",
     "vue": "^2.5.17",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "xlsx": "^0.14.1"
